# fireplace

./: .env.example  .gitignore  README.md  package-lock.json  package.json
client/: package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: ConnectionStatus.tsx  DepthChart.tsx  MarketHeader.tsx  OrderBookLadder.tsx  PriceLevel.tsx  QuoteCalculator.tsx
client/src/hooks/: useQuoteCalculator.ts  useWebSocket.ts
client/src/lib/: aggregator.ts
client/src/store/: orderBookStore.ts
server-rs/: Cargo.toml
server-rs/src/: aggregator.rs  config.rs  main.rs  types.rs  ws_server.rs
server-rs/src/feeds/: kalshi.rs  mod.rs  polymarket.rs  reconnect.rs
server-rs/tests/fixtures/: node-book-update.json  node-connection-status.json  node-heartbeat.json  node-snapshot.json
shared/: package.json  tsconfig.json
shared/src/: constants.ts  types.ts
